Fix image resolution on mobile and tablet screens on homepage

--- a/src/components/HomeBottom/_homebottom.scss
+++ b/src/components/HomeBottom/_homebottom.scss
@@ -3,8 +3,11 @@
   height: auto;
   margin: 0;
   padding: 0;
+  z-index: 1;
+  background-color: $color-white;
   @media (max-width: $screen-md) {
-    margin-top: 2em;
+    margin-top: -1px;
+    padding-bottom: 2.8em;
   }
   &__border {
     border: 2px solid purple;
@@ -12,6 +15,7 @@
     background: white;
     padding: 80px;
     margin: 1em;
+    margin-top: 0;
     display: grid;
     grid-template-columns: 0.5fr 1fr 0.8fr 1fr 1.5fr 0.5fr;
     grid-template-rows: 0.5fr 1fr 0.5fr 1fr;
