--- a/src/components/TextBox/_textbox.scss
+++ b/src/components/TextBox/_textbox.scss
@@ -3,7 +3,8 @@
   background-color: rgba(0, 0, 0, 0.6);
   margin: 35vh 25vw;
   @media (max-width: $screen-md) {
-    margin: 28vh 15vw;
+    //margin: 28vh 15vw;
+    margin: 40vh 15vw;
   }
   @media (max-width: $screen-sm) {
     margin: 30vh 10vw;
@@ -24,6 +25,7 @@
     }
     .para {
       padding: 3em 3em 0 3em;
+      text-align: center;
       @media (max-width: $screen-md) {
         padding: 2em;
         font-size: 0.7em;
